# course_work_parallel_computing_mykyta_nuzhnyi

./: .eslintrc.js  .gitignore  README.md  package.json  start.sh  vue.config.js
inverted_index/: main.py  pyproject.toml
inverted_index/indexLogic/multiThread/: hashTableMulti.py  invertedIndexMulti.py
inverted_index/indexLogic/singleThread/: hashTable.py  invertedIndex.py
src/: App.vue  main.ts
src/http/: index.ts
src/router/: index.ts
src/services/: AxiosService.ts
src/store/: index.ts
src/store/modules/home/: index.ts
src/views/: v-chart-add-multi.vue  v-chart-add-single.vue  v-chart-search-multi.vue  v-chart-search-single.vue  v-list.vue  v-loading.vue  v-main-wrapper.vue
tests/unit/: example.spec.ts
