[tool.poetry]
name = "inverted-index"
version = "0.1.0"
description = ""
authors = ["nuzhnyi <nuzhny@gmail.com>"]
readme = "README.md"
packages = [{include = "inverted_index"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
aioflask = "^0.4.0"
asgiref = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
